--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,10 +1,13 @@
-
-.page{
+.page {
   background: linear-gradient(90deg, #0c3483 0%, #a2b6df 100%, #6b8cce 100%);
   min-height: 100vh;
-  display: flex;
   font-weight: 400;
+  text-align: center;
+  align-items: center;
+  box-sizing: border-box;
+  justify-content: center;
 }
+
 .forgot-password,
 .forgot-password a {
   text-decoration: none;
@@ -17,6 +20,7 @@
 .forgot-password a {
   color: #167bff;
 }
+
 .Login-button {
   background-color: #0b4693;
   border: none;
@@ -40,20 +44,24 @@
   width: 400px;
   height: 40px;
 }
+
 .form-label {
   text-align: left;
   margin: 0px;
   padding-top: 10px;
   padding-right: 360px;
 }
+
 .text-welcome {
   font-size: 25px;
   padding-bottom: 15px;
 }
+
 .text-water {
   padding-bottom: 15px;
   font-size: 16px;
 }
+
 .btn-primary {
   background-color: #0b4693;
   border: none;
@@ -67,7 +75,9 @@
   height: 40px;
   display: inline-block;
 }
+
 .box {
+  position: absolute;
   width: auto;
   padding: 40px 55px 45px 55px;
   transition: all 0.3s;
@@ -75,8 +85,8 @@
   background: #fefefe;
   border-radius: 16px;
   text-align: center;
-  box-sizing: border-box;
   align-items: center;
+  margin: auto;
 }
 
 .btn-success {
@@ -92,6 +102,7 @@
   height: 40px;
   display: inline-block;
 }
+
 .text-control {
   text-align: left;
   margin: 0px;
