--- a/src/Components/User/User.css
+++ b/src/Components/User/User.css
@@ -14,7 +14,7 @@
     width: 150px;
     height: 23px;
     font-size: 22px;
-    top: 80px;
+    margin-top: 15px;
     left: 290px;
 }
 .frame-btn{
