--- a/src/Components/UserGroup/UserGroup.css
+++ b/src/Components/UserGroup/UserGroup.css
@@ -11,10 +11,10 @@
     align-items: flex-start;
     padding: 0px;
     position: absolute;
-    width: 250px;
+    width: 150px;
     height: 23px;
     font-size: 22px;
-    margin-top: 15px;
+    top: 75px;
     left: 290px;
 }
 .frame-btn{
