--- a/src/Components/Map/Css/Header.css
+++ b/src/Components/Map/Css/Header.css
@@ -4,8 +4,9 @@
     background-size: cover;
     right: 0;
     top: 0;
-    height: 63px;
-    margin-top: -40px;
+    height: 64px;
+    margin-top: 64px;
+    margin-left: 245px;
 }
 .dd{
     text-align: right;
