--- a/src/Components/Map/Css/AppMap.css
+++ b/src/Components/Map/Css/AppMap.css
@@ -41,8 +41,7 @@
   position: absolute;
   right: 60px;
   padding: 5px;
-  top: 100px;
-  
+  margin-top: 70px;
 }
 .btn {
   background-color: #3553A4; 
